--- a/templates/lister-icon.html.twig
+++ b/templates/lister-icon.html.twig
@@ -4,6 +4,13 @@
 
 {% block body %}
 
+<div class="topnav">
+	<a href="new-item">New Item</a>
+	<a href="lister-item">Item List</a>
+	<a href="new-icon">New Icon</a>
+	<a href="lister-icon">Icon List</a>
+</div>
+
 <ul>
 
 {% for icon in icons %}
