--- a/templates/new-item.html.twig
+++ b/templates/new-item.html.twig
@@ -2,6 +2,13 @@
 
 {% block body %}
 
+<div class="topnav">
+	<a href="new-item">New Item</a>
+	<a href="lister-item">Item List</a>
+	<a href="new-icon">New Icon</a>
+	<a href="lister-icon">Icon List</a>
+</div>
+
 <div>
 
 {{ form_start(item_form) }}
