--- a/templates/lister-item.html.twig
+++ b/templates/lister-item.html.twig
@@ -11,12 +11,54 @@
 	<a href="lister-icon">Icon List</a>
 </div>
 
-<ul>
+<ul class="nt=5">
 
 {% for item in items %}
-	<li> {{item.name}} {{ item.expirationDate|date("m/d/Y") }} {{item.icon}}</li>
+	<li> {{item.name}} {{ item.expirationDate|date("m/d/Y") }} {{item.icon}}
+		<a href="{{ path('ajax_edit_item', { id: item.id})}}">
+			<i class="fas fa-edit"></i>
+		</a>
+		<span data-url={{ path('delete_item', { id: item.id }) }} id="{{item.id}}">
+			<i class="fas fa-trash-alt text-danger"></i>
+		</span>
+	</li>
 {% endfor %}
 
 </ul>
 
+<a href="{{ path("itemlist_download")}} class="btn btn-info mt-5">
+<i class="fas fa-download"></i>
+</a>
+
+{% endblock %}
+
+{% block javascripts %}
+{{ parent() }}
+<script>
+$(document).ready(function() {
+	$('ul li span').clickfunction(e) {
+		let produceItem_id = $(this).attr('id');
+		
+		$.ajax({
+			url: $(this).data('url'),
+			method: 'DELETE'
+		}).done(function(){
+			$('#'+produceItem_id+"=lister-item").hide();
+		})
+	})
+});
+${document}.ready(function() {
+	${'#ajax-update'}
+		let itemName = $('#item_name').val();
+		let itemdate = $('#item_expirationDate').val();
+		
+		$.ajax({
+			url: $(this).data('url'),
+			method: 'PUT',
+			data: { itemName: itemName, expirationDate: itemdate}
+		}).done(function() {
+			$('#alert-div').html('<div class="alert alert-sucess p-5">Success!</div>')
+		})
+});
+</script>
 {% endblock %}
